fix:change text-align for error

--- a/components/ContactForm/ContactForm.module.scss
+++ b/components/ContactForm/ContactForm.module.scss
@@ -64,6 +64,7 @@
     p {
       color: $error-color;
       font-size: 14px;
+      text-align: start;
     }
   }
 }
